--- a/application/.vscode/launch.json
+++ b/application/.vscode/launch.json
@@ -17,15 +17,12 @@
             "program": "${workspaceRoot}/app/src/entry/main_process/electron.js"      
         },        
         {
-            "name": "Python",
-            "type": "python",
+            "name": "web-packet-service",
+            "type": "node",
             "request": "launch",
-            "stopOnEntry": false,
-            "program": "${workspaceRoot}/WebPackServerRun.py",
-            "debugOptions": [
-                "WaitOnAbnormalExit",
-                "WaitOnNormalExit",
-                "RedirectOutput"
+            "program": "${workspaceRoot}/node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+            "args": [
+                "--inline", "--hot", "--colors", "--port", "9080", "--content-base", "app/dist"
             ]
         }
     ]
