--- a/application/package.json
+++ b/application/package.json
@@ -30,6 +30,7 @@
     "electron-devtools-installer": "^1.1.4",
     "electron-packager": "^8.0.0",
     "electron-rebuild": "^1.1.3",
+    "electron-prebuilt":"1.2.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.16.1",
@@ -43,9 +44,5 @@
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "glob": "^7.1.1",
-    "vuex": "^2.1.1"
   }
 }
