vue js - 一旦〆 コミット

--- a/application/.vscode/tasks.json
+++ b/application/.vscode/tasks.json
@@ -14,7 +14,11 @@
             "taskName": "install",
             "args": [ "install" ],
             "showOutput": "always"
-            
+        },
+        {           
+            "taskName": "webpack devlopment",
+            "args": [ "run", "pack:dev" ],
+            "showOutput": "always"
         }
     ]
 }
