--- a/application/package.json
+++ b/application/package.json
@@ -1,49 +1,52 @@
 {
-  "name": "live2d-sample",
+  "name": "sample",
   "version": "0.0.0",
-  "description": "An electron-vue project",
-  "scripts": {
-    "build": "node tasks/release.js",
-    "build:clean": "cross-env PLATFORM_TARGET=clean node tasks/release.js",
-    "build:darwin": "cross-env PLATFORM_TARGET=darwin node tasks/release.js",
-    "build:linux": "cross-env PLATFORM_TARGET=linux node tasks/release.js",
-    "build:mas": "cross-env PLATFORM_TARGET=mas node tasks/release.js",
-    "build:win32": "cross-env PLATFORM_TARGET=win32 node tasks/release.js",
-    "dev": "node tasks/runner.js",
-    "pack": "cross-env NODE_ENV=production webpack -p --progress --colors",
-    "pack:dev": "cross-env NODE_ENV=development webpack -p --progress --colors --watch",
-    "postinstall": "cd app && npm install"
-  },
-  "author": "Greg Holguin <simulatedgreg@gmail.com>",
+  "main": "./src/main/index.js",
   "license": "MIT",
+  "angular-cli": {},
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "tsc": "tsc ./src/main/index.ts ./src/main/window_manager.ts",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.0.1",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.7.2"
+  },
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.6.1",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
-    "del": "^2.2.1",
-    "devtron": "^1.1.0",
-    "electron": "^1.3.1",
-    "electron-devtools-installer": "^1.1.4",
-    "electron-packager": "^8.0.0",
-    "electron-rebuild": "^1.1.3",
-    "electron-prebuilt":"1.2.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.16.1",
-    "json-loader": "^0.5.4",
-    "style-loader": "^0.13.1",
-    "tree-kill": "^1.1.0",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^9.5.1",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/core-js": "^0.9.41",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.24",
+    "codelyzer": "~2.0.0-beta.1",
+    "electron": "^1.6.8",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "~4.0.13",
+    "ts-node": "1.2.1",
+    "tslint": "^4.0.2",
+    "typescript": "^2.3.2",
+    "webpack": "^2.5.1"
   }
 }
